development/istio/network/istio-gateway.yml

   
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-dev-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-dev
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-dev-gateway
  http:
  - match:
    - uri:
        prefix: /details
    route:
    - destination:
        host: details
        port:
          number: 9080
